# final-project-dustinmeng

./: Balatro.cabal  README.md
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Deck.hs  HandEval.hs  ScoreCalc.hs  Types.hs
